--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Navneetoo7.github.io/portfolio",
+  "homepage": "https://Ankit.github.io/portfolio",
   "name": "ankit-panchal-test",
   "version": "0.1.0",
   "private": true,
